# udemy_js_ts

./: .gitignore  course_notes.md
javascript/: index.html  notes.md
javascript/3-operators/: 1-arithmetic.js  2-assignment.js  3-comaprison.js  5-logical.js  6-bitwise.js
javascript/4-control-flow/: 1-ifelse.js  12-multiples.js  7-fizzBuzz.js
javascript/5-objects/: 0-basic.js  4-clone.js  6-template.js
javascript/6-arrays/: 2-arrow.js  5-array_fun.js  6-arrary_sum.js  ex1-arrayFromRange.js
javascript/7-functions/: 2-arguments.js  4-try_catch.js  5-scope.js  6-this.js
javascript/js_basic/: assignment.js  comparison.js  functions.js  ternary.js
udemy_javascript/: index.js
udemy_javascript/4-control-flow/: 2-switch.js  3-loops.js  4-break_continue.js  8-speedlimit.js
udemy_react_crash_course/: notes.md
udemy_typescript/: course_notes.md  package-lock.json
you_react_django_app/: README.md  package-lock.json
you_react_django_app/backend/: .env  README.md  db.sqlite3  pyproject.toml
you_react_django_app/backend/api/: __init__.py  fields.py  filters.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
you_react_django_app/backend/api/migrations/: 0001_initial.py  0002_vipmodel.py  0003_vipcidrmodel.py
you_react_django_app/backend/backend/: settings.py  settings_auth.py  settings_ldap.py  urls.py
you_react_django_app/backend_fastAPI/: README.md  pyproject.toml  sql_app.db
you_react_django_app/backend_fastAPI/backend_fastapi/: __init__.py  database.py  main.py  sql_app.db
you_react_django_app/backend_fastAPI/backend_fastapi/auth/: jwt.py
you_react_django_app/backend_fastAPI/backend_fastapi/crud/: inventory_crud.py  user_crud.py
you_react_django_app/backend_fastAPI/backend_fastapi/models/: inventory_model.py  user_model.py
you_react_django_app/backend_fastAPI/backend_fastapi/schemas/: inventory_schema.py  user_schema.py
(+160 files in other folders)
