[tool.poetry]
name = "backend_fastAPI"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
python-dotenv = "^1.1.0"
pydantic = {extras = ["email"], version = "^2.11.3"}
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
fastapi-shell = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "nexus_ci"
# url = "https://nexus-ci.onefiserv.net/repository/pypi-group/simple"
# priority = "primary"